# agent-skills

./: .gitattributes  .gitignore  CONTRIBUTORS.md  LICENSE  README.md  package.json
.claude/: SKILL.md
.claude/skills/angular-extension/: SKILL.md
.claude/skills/angular-extension/assets/templates/: component.template.ts  interceptor.template.ts  service.template.ts
.claude/skills/angular-extension/references/: LINKS.md
.claude/skills/angular-extension/scripts/: cli-commands.sh
.claude/skills/bun-extension/: SKILL.md
.claude/skills/bun-extension/assets/templates/: bunfig.toml  server.template.ts
.claude/skills/bun-extension/references/: LINKS.md
.claude/skills/bun-extension/scripts/: bun-commands.sh
.claude/skills/css-extension/: SKILL.md
.claude/skills/css-extension/assets/templates/: reset.css  utilities.css  variables.css
.claude/skills/css-extension/references/: LINKS.md
.claude/skills/golang-extension/: SKILL.md
.claude/skills/golang-extension/assets/templates/: http_handler.template.go  main.template.go  service.template.go
.claude/skills/golang-extension/references/: LINKS.md
.claude/skills/golang-extension/scripts/: go-commands.sh
.claude/skills/html-extension/: SKILL.md
.claude/skills/html-extension/assets/templates/: boilerplate.html  form.html
.claude/skills/html-extension/references/: LINKS.md
.claude/skills/javascript-extension/: SKILL.md
.claude/skills/javascript-extension/assets/templates/: class.template.js  module.template.js
.claude/skills/javascript-extension/references/: LINKS.md
.claude/skills/npm-extension/: SKILL.md
.claude/skills/npm-extension/assets/templates/: .npmrc.template  package.template.json
.claude/skills/npm-extension/references/: LINKS.md
.claude/skills/npm-extension/scripts/: npm-commands.sh
.claude/skills/pnpm-extension/: SKILL.md
.claude/skills/pnpm-extension/assets/templates/: .npmrc.pnpm  pnpm-workspace.yaml
.claude/skills/pnpm-extension/references/: LINKS.md
.claude/skills/pnpm-extension/scripts/: pnpm-commands.sh
.claude/skills/python-extension/: SKILL.md
.claude/skills/python-extension/assets/templates/: module.template.py  pyproject.toml
.claude/skills/python-extension/references/: LINKS.md
.claude/skills/python-extension/scripts/: python-commands.sh
.claude/skills/react-extension/: SKILL.md
.claude/skills/react-extension/assets/templates/: component.template.tsx  hook.template.ts
.claude/skills/react-extension/references/: LINKS.md
.claude/skills/rust-extension/: SKILL.md
.claude/skills/rust-extension/assets/templates/: Cargo.toml  lib.template.rs
.claude/skills/rust-extension/references/: LINKS.md
.claude/skills/rust-extension/scripts/: cargo-commands.sh
.claude/skills/typescript-extension/: SKILL.md
.claude/skills/typescript-extension/assets/templates/: tsconfig.json  types.template.ts
.claude/skills/typescript-extension/references/: LINKS.md
.claude/skills/typescript-extension/scripts/: tsc-commands.sh
.claude/skills/vue-extension/: SKILL.md
.claude/skills/vue-extension/assets/templates/: component.template.vue  composable.template.ts
.claude/skills/vue-extension/references/: LINKS.md
.claude/skills/vue-extension/scripts/: vue-commands.sh
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: README.md
